[package]
name = "async_cache"
version = "0.1.4"
authors = ["Pure White <wudi@purewhite.io>"]
edition = "2021"
description = "Async refresh cache."
repository = "https://github.com/PureWhiteWu/async_cache"
license = "MIT OR Apache-2.0"
keywords = ["cache", "async", "refresh"]
categories = ["asynchronous", "concurrency", "caching"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
faststr = "0.2"
futures = "0.3"
parking_lot = "0.12"
hashbrown = "0.13"
tokio = { version = "1", features = ["sync", "time", "rt"] }
async_singleflight = "0.5"
dashmap = "5.5"
ahash = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
