[package]
name = "async_cache"
version = "0.4.0"
authors = ["Pure White <wudi@purewhite.io>", "Giggle <wjdew@foxmail.com>", "GZTime <Time.GZ@outlook.com>"]
edition = "2021"
description = "Async refresh cache."
repository = "https://github.com/PureWhiteWu/async_cache"
license = "MIT OR Apache-2.0"
keywords = ["cache", "async", "refresh"]
categories = ["asynchronous", "concurrency", "caching"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_singleflight = "0.6"
dashmap = "6"
futures = "0.3"
tokio = { version = "1", features = [ "rt", "sync", "time" ] }

ahash = { version = "0.8", optional = true }

[dev-dependencies]
faststr = "0.2"
tokio = { version = "1", features = [ "full" ] }

[features]
default = ["ahash"]
ahash = ["dep:ahash"]
